<resources>
    <string name="app_name">Cocktail Bar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">My cocktails</string>
    <string name="empty_list_txt">Add your first cocktail here</string>
    <string name="recipe">Recipe:</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="recipe_new">Recipe</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="add">Add</string>
    <string name="ingredient">Ingredient</string>
</resources>