<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="50dp"
    tools:context=".ui.addCocktail.AddIngredientFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="32sp"
            android:textAlignment="center"
            android:layout_marginVertical="24dp"
            android:text="@string/add_ingredient" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameNewIngredientTxt"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/ingredient"
            style="@style/TextElem">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameNewIngredient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddIngredient"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="8dp"
            android:text="@string/add"
            android:backgroundTint="@color/button_color"
            android:textSize="24sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelIngredient"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/cancel"
            app:strokeColor="@color/button_color"
            app:strokeWidth="1dp"
            android:textColor="@color/button_color"
            android:backgroundTint="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>