<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.addCocktail.AddCocktailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgNewCocktail"
            android:background="@drawable/photo"
            android:tint="@color/text_color"
            android:adjustViewBounds="true"
            app:shapeAppearance="@style/CornerCut"
            android:layout_marginTop="64dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerCrop"
            android:layout_width="216dp"
            android:layout_height="204dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameNewCocktailTxt"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/title"
            style="@style/TextElem">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameNewGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descNewCocktailTxt"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/description"
            style="@style/TextElem">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descNewGroup"
                android:lines="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:layout_marginVertical="24dp"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNewIngredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnAddIngredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabCustomSize="24dp"
                android:src="@drawable/ic_add_24"
                android:tint="@color/white"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/button_color"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipeNewCocktailTxt"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/recipe_new"
            style="@style/TextElem">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipeNewGroup"
                android:lines="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveCocktail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="44dp"
            android:text="@string/save"
            android:backgroundTint="@color/button_color"
            android:textSize="24sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelCocktail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="26dp"
            android:text="@string/cancel"
            app:strokeColor="@color/button_color"
            app:strokeWidth="1dp"
            android:textColor="@color/button_color"
            android:backgroundTint="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

</ScrollView>